<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="idea.spark.in.vehicleowner.VehicleSearch">


    <TextView
        android:id="@+id/lbltitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regdet"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/lbltitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/lbltitle"
        android:text="@string/regdetindia"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"/>


    <LinearLayout
        android:id="@+id/lineaarEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/lbltitle1"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_regpart1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters"
                android:maxLength="7"
                android:hint="@string/regnopart1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_regpart2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:imeOptions="actionSearch"
                android:maxLength="4"
                android:hint="@string/regnopart2" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/lbleg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/darker_gray"
        android:text="@string/regnoparteg"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:layout_below="@+id/lineaarEditText"/>

    <Button android:id="@+id/btn_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/searchbtn"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/lbleg"
        android:textColor="@android:color/white"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/bottomBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_bottom_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
